<resources>
    <string name="app_name">My Application</string>
    <string name="upload">Upload</string>
    <string name="cancel">cancel</string>
    <string name="insert_file">INSERT FILE</string>
    <string name="lable">Lable</string>
    <string name="Lable">Lable</string>
    <string name="sign_up">Sign Up</string>
    <string name="changepw">change</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="change_password">Change Password</string>
    <string name="email">Email</string>
    <string name="new_password">new password</string>
    <string name="repeat">repeat</string>
</resources>