<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF8FF"
    android:padding="16dp">

    <!-- Top App Bar -->

    <!-- Insert File Header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"

        android:background="@drawable/border">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:text="@string/Lable"
            android:textSize="19sp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_sort_by_size" />

    </RelativeLayout>

    <!-- File Box Placeholder -->

    <!-- Download Icon -->

    <!-- Spacer -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/insertFileLabel"
            android:layout_width="281dp"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

    </RelativeLayout>

    <!-- Bottom Buttons -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:padding="50dp">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/editTextTextPassword3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbutton"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingHorizontal="32dp"
            android:paddingVertical="12dp"/>


        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:paddingHorizontal="24dp"
            android:strokeWidth="1"
            android:strokeColor="#DDD"
            android:text="@string/cancel"
            android:textColor="#000" />
    </LinearLayout>

</LinearLayout>